# ai-ml-design-patterns

./: .gitignore  README.md
agentic-ai-tool-use/: .env.example  .gitignore  README.md  requirements.txt
churn-predictor/: .gitignore  README.md  requirements.txt
cnn-vit-satellite-image-classifier/: README.md  docker-compose.yml  requirements.txt
gen-ai-rag-chatbot/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  architecture.md  requirements-app.txt  requirements.txt
gnn-movie-recommender/: README.md  requirements.txt  run_all.sh
llm-alignment-fine-tuning/: .gitignore  README.md  requirements.txt
tensor-graph-inference-engine/: CMakeLists.txt  Makefile  README.md  requirements.txt
tensor-graph-inference-engine/.github/workflows/: test.yml
tensor-graph-inference-engine/docs/: arena_design.md
tensor-graph-inference-engine/include/tge/: arena_planner.hpp  demo_graph.hpp  engine.hpp  graph.hpp  types.hpp
tensor-graph-inference-engine/reports/: benchmark_results.csv  generate_plots.py
tensor-graph-inference-engine/scripts/: 01_compile_model.py  02_infer.py  03_benchmark.py
tensor-graph-inference-engine/src/: arena_planner.py  demo_graph.py  engine.py  fp32_reference.py  graph.py  infer_main.cpp  model_format.py  ops.py  types.py
tensor-graph-inference-engine/tests/: test_arena_planner.cpp  test_arena_planner.py  test_end_to_end.cpp  test_end_to_end.py  test_model_format.py  test_ops.cpp  test_ops.py  test_zero_alloc.cpp  test_zero_alloc.py
tensor-graph-inference-engine/tools/: compile_model.cpp
(+299 files in other folders)
